kubernetes-manifests/search/searxng-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-nodeport
  namespace: search
  labels:
    app: searxng
spec:
  type: NodePort
  selector:
    app: searxng
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
